# finance-alchemy

./: .env.example  .gitignore  README.md  manage.sh  pyproject.toml  test_celery_poll.py  test_celery_task.py
.agent/workflows/: code-review.md  frontend-review.md  tech-review.md  ux-review.md
config/agents/: agents.yaml  tasks.yaml
scripts/: check_news_type.py  discover_fin_params.py  discover_news_params.py  encrypt_keys.py  probe_keywords.py  search_skills.py  test_claw_integration.py  test_connectivity.py  test_direct_endpoints.py  test_news_search.py  test_news_search_v2.py  test_news_via_screen.py  test_official_skills.py
src/: config.py
src/application/dto/: analysis_dto.py
src/application/use_cases/: analyze_stock.py
src/domain/entities/: __init__.py  kline.py  signal.py  stock.py
src/domain/repositories/: analysis_repository.py
src/domain/services/: backtesting_service.py  technical_calculator.py
src/domain/value_objects/: financial_metrics.py
src/infrastructure/crewai_workers/: __init__.py
src/infrastructure/crewai_workers/agents/: __init__.py  audit_agent.py  fundamental_agent.py  strategy_agent.py  (+1 more)
src/infrastructure/data_fetcher/: __init__.py  akshare_fetcher.py  base.py  claw_fetcher.py  exceptions.py  utils.py
src/infrastructure/persistence/: database.py  models.py  sqlite_repository.py
src/infrastructure/security/: vault.py
src/interface/cli/: main.py
src/interface/gui/: main.py  report_formatter.py
src/tasks/: analysis_tasks.py  celery_app.py
tests/integration/: test_akshare_fetcher.py
tests/unit/: test_domain_entities.py  test_technical_calculator.py
(+7 files in other folders)
